# AutoViz

./: .gitignore  CMakeLists.txt  README.md
configs/: package_state.json  render.json  topics.json  ui_state.json  vehicle_params.json
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/core/config/: VehicleConfig.cpp  VehicleConfig.h
src/core/datacenter/: DataManager.cpp  DataManager.h
src/core/datasource/: IMsgParser.h  ITopicSource.h  MsgCompiler.cpp  MsgCompiler.h  MsgDefinition.cpp  MsgDefinition.h  MsgRegistry.cpp  MsgRegistry.h  RosMsgPackage.cpp  RosMsgPackage.h  RosMsgPackageRegistry.cpp  RosMsgPackageRegistry.h  TopicConfig.h
src/core/model/: CommonTypes.h  ControlTypes.cpp  ControlTypes.h  EgoModel.h  ObstacleModel.h  ObstacleTypes.cpp  ObstacleTypes.h  PathTypes.cpp  PathTypes.h  TrajectoryModel.h  VehicleState.cpp  VehicleState.h
src/core/render/: SceneManager.cpp  SceneManager.h
src/core/ros/: ProcessRunner.cpp  ProcessRunner.h  Ros1MsgSubsrcribe.cpp  Ros1MsgSubsrcribe.h  Ros2MsgSubsrcribe.cpp  Ros2MsgSubsrcribe.h  RosEnvironmentDetector.cpp  RosEnvironmentDetector.h  RosMsgSubscribeBase.cpp  RosMsgSubscribeBase.h  RosMsgSubsrcribeFactory.cpp  RosMsgSubsrcribeFactory.h  RosPackageBuilder.cpp  RosPackageBuilder.h  RosPackageRegistry.cpp  RosPackageRegistry.h  RosPackageValidator.cpp  RosPackageValidator.h  RosTypes.h  RosWorkspaceManager.cpp  RosWorkspaceManager.h
src/message/: README.md
src/ui/: ControlStatusPanel.cpp  ControlStatusPanel.h  DetailPanel.cpp  DetailPanel.h  DisplayControlPanel.cpp  DisplayControlPanel.h  LogPanel.cpp  LogPanel.h  MessagePackagePanel.cpp  MessagePackagePanel.h  TopicConfigPanel.cpp  TopicConfigPanel.h  VisualizationView.cpp  VisualizationView.h
src/ui/charts/: ChartPanel.cpp  ChartPanel.h
src/utils/: Logger.cpp  Logger.h
